cluster/platform/ingress/haproxy-gateway/httproute-http-to-https-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: ingress-haproxy
spec:
  parentRefs:
    - name: public
      sectionName: http
  hostnames:
    - "*.k8s.rcrumana.xyz"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
